# Proyecto1_Bases_2

./: Dockerfile  Dockerfile.spark  Dockerfile.superset  Dockerfile.test  README.md  Security.py  app.py  db_mongo.py  db_mongo_service.py  db_mongo_service_test.py  db_neo4j.py  db_neo4j_service.py  db_postgre.py  db_postgre_service.py  db_redis.py  db_redis_service.py  docker-compose.pruebas.yml  docker-compose.spark.yml  docker-compose.yml  docker-init.sh  import_dashboards.sh  kafka_service.py  kafka_service_for_spark.py  pruebas.py  pruebasIntegracion.py  pyproject.toml  spark.py
.github/workflows/: github-container-registry.yaml
.githun/workflows/: prueba.yml
database/postgre/: 00-init.sql  01-users.sql  02-respondents.sql  03-create-tables.sql
